--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title:       Pixyll
-email:       your_email@example.com
-author:      John Otander
-description: "A simple, beautiful theme for Jekyll that emphasizes content rather than aesthetic fluff."
+title:       Zwischenmensch
+email:       mail@zwischenmensch.at
+author:      Peter Flucher
+description: "Ein Blog über Geschichten"
 baseurl:     ""
-url:         "http://pixyll.com"
+url:         "http://zwischenmensch.at"
 date_format: "%b %-d, %Y"
 
 # Google services
@@ -23,10 +23,10 @@ ajaxify_contact_form: false
 disqus_shortname:
 
 # Social icons
-github_username:
+github_username:		efelcie
 bitbucket_username:
 stackoverflow_id:
-twitter_username:
+twitter_username:		efelcie
 google_plus_id:
 linkedin_username:
 angellist_username:
