--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ share_hackernews: false
 # Build settings
 markdown:     kramdown
 redcarpet:
-  extensions: ['smart', 'tables', 'with_toc_data']
+  extensions: ['footnotes', 'smart', 'tables', 'with_toc_data']
 permalink:    :title/
 paginate:     4
 sass:
