--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ google_verification:
 
 # Optional features
 animated:             true
-show_related_posts:   false
-show_post_footers:    false
+show_related_posts:   true
+show_post_footers:    true
 show_social_icons:    true
 ajaxify_contact_form: false
 
@@ -39,13 +39,13 @@ paypal_url:
 flattr_button:
 
 # Post sharing icons
-show_sharing_icons: false
+show_sharing_icons: true
 share_text: 'Share this post!'
 # Change to 'true' to enable individual icons
-share_facebook: false
-share_twitter: false
-share_googleplus: false
-share_linkedin: false
+share_facebook: true
+share_twitter: true
+share_googleplus: true
+share_linkedin: true
 share_digg: false
 share_tumblr: false
 share_reddit: false
