--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ google_verification:
 animated:             true
 show_related_posts:   true
 show_post_footers:    true
-show_social_icons:    true
+show_social_icons:    false
 ajaxify_contact_form: false
 
 # Disqus post comments
