--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ google_verification:
 
 # Optional features
 animated:             true
-show_related_posts:   true
+show_related_posts:   false
 show_post_footers:    true
 show_social_icons:    false
 ajaxify_contact_form: false
@@ -39,7 +39,7 @@ paypal_url:
 flattr_button:
 
 # Post sharing icons
-show_sharing_icons: true
+show_sharing_icons: false
 share_text: 'Share this post!'
 # Change to 'true' to enable individual icons
 share_facebook: true
