--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ date_format: "%b %-d, %Y"
 
 # Google services
 google_analytics:	UA-68575299-1
-google_verification:
+google_verification: 100891318470005286449
 
 
 
@@ -30,7 +30,7 @@ github_username:		efelcie
 bitbucket_username:
 stackoverflow_id:
 twitter_username:		efelcie
-google_plus_id:
+google_plus_id:			100891318470005286449
 linkedin_username:
 angellist_username:
 medium_id:
